# cuda_lab

./: .clangd  .gitignore  CMakeLists.txt  README.md
.github/prompts/: copilot-commit-message-instructions.md  cuda.prompt.md
cmake/: AutoProject.cmake
include/: cuda_scoped_timer.hpp  file_utils.hpp  matrix.hpp  memory.hpp  scoped_timer.hpp  size_literals.hpp
src/: CMakeLists.txt
src/async_overlap/: CMakeLists.txt  async_overlap.cpp  async_overlap.cu  async_overlap.h  main.cpp  memory.hpp  scoped_timer.hpp
src/cuda_device_prop/: main.cpp
src/hello_cuda/: CMakeLists.txt  hello_cuda.cpp  hello_cuda.cu  hello_cuda.h  main.cpp
src/l2_cache/: l2_cache.cpp  l2_cache.cu  l2_cache.h  main.cpp
src/matrix_multiply/: CMakeLists.txt  cuda_base.h  main.cpp  matrix.h  matrix_multiply  matrix_multiply.cpp  matrix_multiply.cu  matrix_multiply.h
src/misaligned_access/: main.cpp  misaligned_access.cpp  misaligned_access.cu  misaligned_access.h  plot.py
src/pinned_memory/: main.cu
src/test_pinned_memory/: main.cu
src/timing/: CMakeLists.txt  timing.cpp  timing.cu  timing.h
src/zero_copy_benchmark/: main.cpp  zero_copy_benchmark.cpp  zero_copy_benchmark.cu  zero_copy_benchmark.h
test/: CMakeLists.txt  test_memory.cpp
